deploy/k8s/deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: api-notifications-deployment # Nombre del deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-notifications # Match label para agrupar contenedores
  template:
    metadata:
      labels:
        app: api-notifications # Nombre Pod
    spec:
      containers:
      - name: api-notifications # Nombre del contenedor
        image: gcr.io/{GOOGLE_PROJECT_ID}/{IMAGE_DOCKER}
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: gcrsecret # Secrets que contiene la cuenta de servicio para realizar pull de repositorio de Images Mallplaza
