deploy/k8s/services.yaml
apiVersion: v1
kind: Service
metadata:  
  name: api-notifications-service
spec:
  selector:    
    app: api-notifications
  type: NodePort
  ports:  
  - protocol: TCP
    port: 80
    targetPort: 8080
